--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "keywords": [],
   "author": "ochuko awhe ",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.2",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2",
     "tus-js-client": "^4.1.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.57.0",
     "globals": "^15.2.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.4",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0"
   }
